# packetfilter

./: .gitignore  Cargo.toml  README.md
bpf/: Makefile  bpf_helpers.h  bytecode.c
examples/: ipv6RuleConfig.json  ruleConfig.json
src/: code.rs  config.rs  lib.rs  main.rs  packet.rs
