[package]
name = "packetfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
log = "0.4"
ctrlc = "3.2"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.anyhow]
version  = "1.0.45"
features = ["backtrace"]

[dependencies.aya]
git = "https://github.com/aya-rs/aya"
branch="main"
features = ["async_tokio"]

[dependencies.pnet]
version = "0.28.0"

[dependencies.zerocopy]
version = "0.6.1"